syntax = "proto3";

package datacloud.console.v1;

option go_package = "a.yandex-team.ru/cloud/mdb/datacloud/private_api/datacloud/console/v1;console";
option java_package = "doublecloud.priv.console.v1";
option java_outer_classname = "DCCSL";

message StringValidator {
  // Regex for valid values.
  string regexp = 1;

  // Minimum length in symbols.
  int64 min = 2;

  // Maximum length in symbols.
  int64 max = 3;

  // List of invalid values.
  repeated string blocklist = 4;
}

message BillingMetric {
  message BillingTags {
    int64 public_ip = 1;
    string disk_type_id = 2;
    string cluster_type = 3;
    int64 disk_size = 4;
    string resource_preset_id = 5;
    string platform_id = 6;
    int64 cores = 7;
    int64 core_fraction = 8;
    int64 memory = 9;
    int64 software_accelerated_network_cores = 10;
    repeated string roles = 11;
    int64 online = 12;
    int64 on_dedicated_host = 13;
    string cloud_provider = 14;
    string cloud_region = 15;
    string resource_preset_type = 16;
  }

  // ID of the folder for metric
  string folder_id = 1;
  // Billing metric schema spec
  string schema = 2;
  // Billing tags
  BillingTags tags = 3;
}

message BillingEstimate {
  // List of billing metrics of estimation
  repeated BillingMetric metrics = 1;
}
